# MateriologicalAlertSystem

./: .gitignore  Dockerfile  README.md
backend/: backend.cabal  test_nan.txt
backend/app/: Main.hs
backend/src/: Classifier.hs  Types.hs
frontend/: build_log.txt  build_output.txt  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: CalamityClassification.jsx  CurrentConditions.jsx  ForecastStrip.jsx  SeasonalContext.jsx  StormRiskLevel.jsx  WeatherCharts.jsx  WeatherDashboard.jsx
frontend/src/lib/: HybridMLEngine.js  HybridRuleEngine.js
