cabal-version:      3.0
name:               backend
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             Rohith Subramanian Nithyadevi
maintainer:         rohithsn18@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable backend
  import:           warnings
  main-is:          Main.hs
  hs-source-dirs:   app, src

  build-depends:
      base >=4.14 && <5,
      scotty,
      aeson,
      text,
      wai-cors

  other-modules:
      Classifier
      Types

  default-language: GHC2021
